--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "APITest": "npx playwright test tests/airalo_api_test.spec.js",
+    "WebTest": "npx playwright test tests/airalo_web_test.spec.js",
     "Cucumber_WebTest": "npx cucumber-js --format html:cucumber_report.html --retry 1",
     "All_Tests": "npm run APITest && npm run Cucumber_WebTest"
   },
@@ -15,9 +16,7 @@
   "devDependencies": {
     "@playwright/test": "^1.51.1",
     "@types/node": "^22.13.10",
-    "allure-playwright": "^3.2.1",
-    "typescript": "^5.8.2",
-    "dotenv": "^16.5.0"
+    "allure-playwright": "^3.2.1"
   },
   "dependencies": {
     "@cucumber/cucumber": "^11.2.0",
