--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,18 +10,32 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
     - uses: actions/setup-node@v4
       with:
-        node-version: lts/*
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
+        node-version: lts/* # Uses the latest LTS (Long Term Support) Node.js version
+
+    - name: Install Node.js dependencies
+      run: npm ci # 'npm ci' is preferred in CI for clean and fast installs based on package-lock.json
+
+    - name: Install Playwright Browsers and System Dependencies
+      # This command downloads the browsers (Chromium, Firefox, WebKit)
+      # and installs their necessary system-level dependencies on Linux (like Ubuntu).
       run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
+
+    - name: Run All Tests
+      # This command assumes 'npm run All_Tests' in your package.json
+      # is configured to execute both Playwright and Cucumber tests.
+      run: npm run All_Tests
+
+    - name: Upload Test Reports
+      # This step uploads both the Playwright HTML report and the Cucumber HTML report
+      # as a single artifact, making them available for download in GitHub Actions.
+      if: ${{ !cancelled() }} # Only upload if the job wasn't cancelled
+      uses: actions/upload-artifact@v4
       with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+        name: test-reports # A descriptive name for the uploaded artifact
+        path: |
+          playwright-report/ # Path to Playwright's default HTML report directory
+          cucumber_report.html # Path to Cucumber's HTML report file
+        retention-days: 30 # How long to keep the artifact (e.g., 30 days)
